--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/socialite": "^5.10",
         "laravel/tinker": "^2.8",
+        "pusher/pusher-php-server": "^7.2",
         "srmklive/paypal": "~3.0",
         "stripe/stripe-php": "^13.1",
         "yoeunes/toastr": "^2.3"
