--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
     },
     "autoload": {
         "files": [
-            "App/Helper/helpers.php"
+            "app/Helper/helpers.php"
         ],
         "psr-4": {
             "App\\": "app/",
